--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/DMDB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ant-javafx.jar=lib/ant-javafx.jar
 file.reference.sqlite-jdbc.jar=lib/sqlite-jdbc.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,6 +37,7 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${file.reference.ant-javafx.jar}:\
     ${file.reference.sqlite-jdbc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
