DataBase is copied to deployment directory.

--- a/build.xml
+++ b/build.xml
@@ -50,4 +50,8 @@
     nbproject/build-impl.xml and nbproject/jfx-impl.xml.
 
     -->
+    
+    <target name="-post-jfx-deploy">
+        <copy file="movie.db" todir="${jfx.deployment.dir}" />
+    </target>
 </project>
